_sass/main.scss
@import url('https://fonts.googleapis.com/css?family=Maven+Pro:400,500,900');

body {
  background-color: #ededed;
  font-size: 14px;
  line-height: 20px;
  font-weight: 500;
  font-style: normal;
  font-family: 'Maven Pro', consolas, sans-serif, fixed-width;
  color: #333333;
  padding: 20px;
  margin: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-text-size-adjust: 100%;
  @media (min-width: 992px) {
    padding: 35px 50px;
  }
}
h1,
h2,
h3,
h4,
h5 {
  margin: 45px 0 25px;
  font-weight: 900;
  text-transform: lowercase;
}
h1{ font-size: 36px; line-height: 40px; }
h2{ font-size: 30px; line-height: 36px; }
h3{ font-size: 26px; line-height: 30px; }
h4{ font-size: 20px; line-height: 26px; }
h5{ font-size: 16px; line-height: 20px; }
h6{ font-size: 12px; line-height: 16px; }
img {
  max-width: 100%;
}
a {
  color: inherit;
  text-decoration: none;
  &.image {
    display: block;
    text-align: center;
    margin: 30px 0;
  }
}
mark {
  background: #fffc76;
  padding: 0 5px;
}
blockquote {
  border-left: 5px solid #ccc;
  margin: 40px 0;
  padding: 5px 30px;
  background: #eee;
}
.logo {
  position: relative;
  margin: 0 auto 35px;
  text-align: center;
  animation-duration: 0.7s;
  animation-fill-mode: both;
  animation-name: bounce;
  -webkit-animation-duration: 0.7s;
  -webkit-animation-fill-mode: both;
  -webkit-animation-name: bounce;
  a {
    // background: #ededed; url("gravatar_wrapper.png");
    // color: #ededed;
    text-decoration: none !important;
    font-weight: 700;
    height: 100px;
    width: 250px;
    font-size: 1.5em;
    // border-radius: 100%;
    display: inline-block;
    text-align: center;
    line-height: 100px;
    // border: 5px solid #fff;
    &:hover,
    &:focus {
      // border: 2px solid yellow;
    }
    &:hover + .logo-prompt,
    &:focus + .logo-prompt {
      display: inline-block !important;
    }
    // .gravatar {
    //   margin-top: 5px;
    //   // -webkit-border-radius: 50%;
    //   // -moz-border-radius: 50%;
    //   // border-radius: 50%;
    // }
    // @media (max-width : 480px) {&:hover + .logo-prompt,
    //   &:focus + .logo-prompt {
    //     display: none !important;
    //   }
    // }
  }
  .logo-prompt {
    position: absolute;
    display: none;
    vertical-align: middle;
    padding: 5px;
    border-radius: 3px;
    background: #666;
    background: rgba(0,0,0,.5);
    margin-left: 15px;
    color: #fff;
    font-size: 0.8235em;
    text-align: center;
    line-height: 1.2;
    top: 50%;
    margin-top: -45px;
    &:before {
      content: "";
      border-width: 5px 5px 5px 0;
      border-style: solid;
      border-color: transparent #666;
      border-color: transparent rgba(0,0,0,.5);
      position: absolute;
      top: 50%;
      left: -5px;
      margin-top: -5px;
    }
  }
}
// iframe {
//   margin: 45px 0 !important;
// }
ul,
ol {
  margin: 40px 0;
  padding-left: 50px;
  li {
    word-wrap: break-word;
  }
  img {
    margin: 40px 0;
    border-radius: 5px;
  }
}
sup {
  vertical-align: top;
  position: relative;
  top: -0.5em;
  margin-left: 1px;
}
time {
  color: #555;
}
code,
pre {
  font-family: Consolas, Courier, monospace;
}
code {
  color: #f14e32;
  background: #eee;
  padding: 2px 6px;
  font-size: 13px;
}
pre {
  display: block;
  margin-top: 0;
  margin-bottom: 1rem;
  font-size: 0.8rem;
  line-height: 1.4;
  white-space: pre;
  overflow-x: auto;
  background-color: #f9f9f9;
  border: 1px solid #ddd;
  padding: 1rem;
  code {
    font-size: 100%;
    color: inherit;
    background-color: transparent;
    padding: 0;
  }
}
table {
  width: 100%;
  table-layout: fixed;
  margin: 45px 0;
  thead {
    background: #f2f2f2;
  }
  th {
    text-align: left;
    padding: 8px 10px;
    border-bottom: 15px solid #fff;
  }
  td {
    padding: 4px 0;
  }
}
iframe {
  width: 100%;
}
article {
  max-width: 800px;
  margin: 0 auto;
  .title {
    line-height: 1.4em;
    text-align: center;
  }
  .divider {
    background: #ddd;
    background: -webkit-gradient(linear,left top,right top,from(rgba(255,255,255,0)),color-stop(#ccc),to(rgba(255,255,255,0)));
    background: -webkit-linear-gradient(left,rgba(255,255,255,0),#ccc,rgba(255,255,255,0));
    background: linear-gradient(to right,rgba(255,255,255,0),#ccc,rgba(255,255,255,0));
    height: 1px;
    margin: 2em 0;
  }
  .center {
    text-align: center;
    margin: 0 auto;
  }
  hr {
    border: 0;
    border-bottom: 1px solid #000;
    margin: 30px 0;
  }
  p {
    font-size: 15px;
    line-height: 1.9em;
    word-wrap: break-word;
  }
  .footnote {
    border: 0;
    background-color: #0087BE;
    color: #fff;
    padding-left: 2px;
    padding-right: 2px;
  }
  .footnotes {
    margin: 50px auto;
    display: block;
    p {
      line-height: 1rem;
      font-weight: normal;
    }
    ol {
      margin: 0;
      padding-left: 15px;
      li {
        font-weight: bold;
      }
    }
    .reversefootnote {
      border: 0;
      color: #0087BE;
    }
  }
  a{ color: #36718c;}
  a:hover {
    color: #71909e;
    border-color: #369;
  }
}
.back {
  text-align: center;
  a {
    text-decoration: none;
    margin: 40px auto 0;
    display: inline-block;
    padding: 10px;
    border: 0;
    &:before {
      content: "<<";
      margin-right: 5px;
      color: #000;
    }
  }
}
.block {
  display: block;
}
.page-navigation,
.footer {
  text-align: center;
  max-width: 500px;
  margin: 0 auto;
  font-size: 0.8rem;
}
.page-navigation {
  margin: 50px auto 0 auto;
  a {
    display: inline-block;
    text-decoration: none;
    border-bottom: none;
  }
  span {
    display: inline-block;
  }
}
.footer {
  margin-top: 50px;
  color: #777;
  a {
    border: none;
    font-weight: bold;
  }
}
section {
  max-width: 800px;
  margin: 0 auto 50px auto;
  ul {
    list-style: none;
    margin: 0;
    padding: 0;
    li {
      margin: 25px 0;
      .title {
        max-width: 100%;
        //overflow: hidden !important;
        //text-overflow: ellipsis !important;
        //white-space: nowrap !important;
        word-wrap: normal !important;
        font-size: 18px;
        font-weight: 500;
      }
      a {
        text-decoration: none;
        border: 0;
        color: #000;
        box-sizing: border-box;
      }
      .post-date {
        float: right;
        margin: 0 0 0 20px;
      }
      .yellow {
        display: inline-block;
        background-color: #ffbd82;
        color:#757575;
        letter-spacing: 1px;
        text-transform: lowercase;
        font-size:11px;
      }
      @media (min-width: 992px) {.home-post-link {
          border-bottom: 2px solid transparent;
          line-height: 1.3em;
          &:hover {
            border-color: #000;
          }
        }
      }
      .tag {
        font-size:12px;
        font-weight:bold;
      }
      // .tag:hover{
      //   font-style: italic;
      // }
    }
  }
}
@keyframes bounce {0% {
    transform: translate3d( 0, -1000px, 0 );
  }
  60% {
    transform: translate3d( 0, 25px, 0 );
  }
  75% {
    transform: translate3d( 0, -10px, 0 );
  }
  90% {
    transform: translate3d( 0, 5px, 0 );
  }
  100% {
    transform: none;
  }
}
@-webkit-keyframes bounce {0% {
    -webkit-transform: translate3d( 0, -1000px, 0 );
  }
  60% {
    -webkit-transform: translate3d( 0, 25px, 0 );
  }
  75% {
    -webkit-transform: translate3d( 0, -10px, 0 );
  }
  90% {
    -webkit-transform: translate3d( 0, 5px, 0 );
  }
  100% {
    -webkit-transform: none;
  }
}
button{
  -moz-box-shadow: 1px 2px 3px rgba(48, 206, 255, .5);
  -webkit-box-shadow: 1px 2px 3px rgba(48, 206, 255, .5);
  box-shadow: 1px 2px 3px rgba(48, 206, 255, .5);
  padding: 8px;
}
button:hover {
  -moz-box-shadow: 2px 4px 6px rgba(237, 255, 48, .5);
  -webkit-box-shadow: 2px 4px 6px rgba(237, 255, 48, .5);
  box-shadow: 2px 4px 6px rgba(237, 255, 48, .5);
}

.line-link{
  border-bottom: 2px solid transparent;
  line-height: 1.3em;
  &:hover {
    border-color: #000;
  }
}
#home-button-container,
article{
  .button {
      display: inline-block;
      text-align: center;
      vertical-align: middle;
      padding: 4px 21px;
      border: 0px solid #c2a800;
      border-radius: 8px;
      background: #f7f7f7 /*#ededed*/;
      -webkit-box-shadow: #ccc200 4px 7px 9px 0px;
      -moz-box-shadow: #ccc200 4px 7px 9px 0px;
      box-shadow: #ccc200 4px 7px 9px 0px;
      font: normal normal bold 10px;
      text-decoration: none;
  }
  .button:hover,
  .button:focus,
  .button:active {
  	-webkit-box-shadow: #dcc209 6px 9px 11px 0px;
  	-moz-box-shadow: #dcc209 6px 9px 11px 0px;
  	box-shadow: #dcc209 6px 9px 11px 0px;
  }
}

